[package]
name = "select_example"
version = "0.1.0"
authors = ["Elliott Clarke <elliott.clarke.ext@siemens-energy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
yew-bulma-search-select = {path = "../.." }